render json data

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,16 @@
 </head>
 
 <body>
-    <h1>Home: <%= description %>
-    </h1>
+    <h1>Home</h1>
+
+    <p>
+        <%= description %>
+    </p>
+
+    <p>
+        <%= coursesObject[0].title %>
+    </p>
+
 </body>
 
 </html>
